2023-01-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/aspdk15/pdk15mch.c:
	  Fix bug #3191.
	* src/SDCCsymt.c:
	  Fix bug #3516.
	* src/SDCCopt.c,
	  support/regression/cases/Makefile.in:
	  Fix bug #3400.

2023-01-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCval.c:
	  Make ulFromVal a wrapper for ullFromVal to remove duplicate code and partially fix bug #3539.
	* src/z80/gen.c:
	  Fix an sm83 issue similar to z80 bug #3503.
	* doc/sdccman.lyx:
	  Add _BitInt to type list in manual.
	* src/SDCCglue.c:
	  Skip invalid init list bits. Fix bug #2928.
	* src/SDCCicode.c,
	  support/regression/tests/bug-2983.c:
	  Fix bug #2983.
	* src/pdk/peeph.def:
	  Fix an issue in two pdk peephole rule conditions.s
	* src/SDCCsymt.c:
	  Fix bug #2998.
	* src/SDCC.lex,
	  support/valdiag/tests/bug-3012.c:
	  Fix bug #3012.

2023-01-25 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCval.c:
	  Type fixes (fixing regressions visible on 32-bit big-endian hosts), partial fix for bug #3539.
	* src/stm8/gen.c:
	  Fix an stm8 issue similar to z80 bug #3503.
	* src/pdk/peeph.def:
	  Fix use of cneqsn, which is not supported on pdk13.

2023-01-24 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/sdccman.lyx,
	  doc/z80-stack-cleanup.svg:
	  Improve documentation on stack cleanup (support request #182).
	* src/SDCCpeeph.c,
	  src/pdk/gen.c,
	  src/pdk/peeph.def,
	  support/regression/tests/bug-3525.c:
	  Fix bug #3525.

2023-01-23 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCbtree.cc:
	  Fix bug #3505.
	* src/ds390/gen.c,
	  src/mcs51/gen.c,
	  src/z80/gen.c:
	  Type fixes for code generation (fixing regressions visible on 32-bit big-endian hosts), partial fix for bug #3539.
	* device/include/stdckdint.h,
	  device/lib/strtol.c,
	  device/lib/strtoul.c,
	  support/regression/tests/bug-3474.c,
	  support/regression/tests/bug-2854.c
	  Fix bug #3474.
	* support/regression/tests/gcc-torture-execute-p18298.c: